crates/pg_syntax/tests/snapshots/postgres_regress/partition_aggregate@44.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO pagg_tab2 SELECT i % 20, i % 30 FROM generate_series(0, 299, 3) i;"
---
InsertStmt@0..78
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..21
    Ident@12..21 "pagg_tab2"
  Whitespace@21..22 " "
  SelectStmt@22..77
    Select@22..28 "SELECT"
    Whitespace@28..29 " "
    ResTarget@29..35
      AExpr@29..35
        ColumnRef@29..30
          Ident@29..30 "i"
        Whitespace@30..31 " "
        Ascii37@31..32 "%"
        Whitespace@32..33 " "
        AConst@33..35
          Iconst@33..35 "20"
    Ascii44@35..36 ","
    Whitespace@36..37 " "
    ResTarget@37..43
      AExpr@37..43
        ColumnRef@37..38
          Ident@37..38 "i"
        Whitespace@38..39 " "
        Ascii37@39..40 "%"
        Whitespace@40..41 " "
        AConst@41..43
          Iconst@41..43 "30"
    Whitespace@43..44 " "
    From@44..48 "FROM"
    Whitespace@48..49 " "
    RangeFunction@49..77
      List@49..74
        FuncCall@49..74
          Ident@49..64 "generate_series"
          Ascii40@64..65 "("
          AConst@65..66
            Iconst@65..66 "0"
          Ascii44@66..67 ","
          Whitespace@67..68 " "
          AConst@68..71
            Iconst@68..71 "299"
          Ascii44@71..72 ","
          Whitespace@72..73 " "
          AConst@73..74
            Iconst@73..74 "3"
      Ascii41@74..75 ")"
      Whitespace@75..76 " "
      Alias@76..77
        Ident@76..77 "i"
  Ascii59@77..78 ";"

