crates/pg_syntax/tests/snapshots/postgres_regress/partition_aggregate@48.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT t1.x, sum(t1.y), count(*) FROM pagg_tab1 t1, pagg_tab2 t2 WHERE t1.x = t2.y GROUP BY t1.x ORDER BY 1, 2, 3;"
---
SelectStmt@0..114
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      Ident@10..11 "x"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..21
    FuncCall@13..21
      Ident@13..16 "sum"
      Ascii40@16..17 "("
      ColumnRef@17..21
        Ident@17..19 "t1"
        Ascii46@19..20 "."
        Ident@20..21 "y"
  Ascii41@21..22 ")"
  Ascii44@22..23 ","
  Whitespace@23..24 " "
  ResTarget@24..31
    FuncCall@24..31
      Ident@24..29 "count"
      Ascii40@29..30 "("
      Ascii42@30..31 "*"
  Ascii41@31..32 ")"
  Whitespace@32..33 " "
  From@33..37 "FROM"
  Whitespace@37..38 " "
  RangeVar@38..50
    Ident@38..47 "pagg_tab1"
    Whitespace@47..48 " "
    Alias@48..50
      Ident@48..50 "t1"
  Ascii44@50..51 ","
  Whitespace@51..52 " "
  RangeVar@52..64
    Ident@52..61 "pagg_tab2"
    Whitespace@61..62 " "
    Alias@62..64
      Ident@62..64 "t2"
  Whitespace@64..65 " "
  Where@65..70 "WHERE"
  Whitespace@70..71 " "
  AExpr@71..82
    ColumnRef@71..75
      Ident@71..73 "t1"
      Ascii46@73..74 "."
      Ident@74..75 "x"
    Whitespace@75..76 " "
    Ascii61@76..77 "="
    Whitespace@77..78 " "
    ColumnRef@78..82
      Ident@78..80 "t2"
      Ascii46@80..81 "."
      Ident@81..82 "y"
  Whitespace@82..83 " "
  GroupP@83..88 "GROUP"
  Whitespace@88..89 " "
  By@89..91 "BY"
  Whitespace@91..92 " "
  ColumnRef@92..96
    Ident@92..94 "t1"
    Ascii46@94..95 "."
    Ident@95..96 "x"
  Whitespace@96..97 " "
  SortBy@97..107
    Order@97..102 "ORDER"
    Whitespace@102..103 " "
    By@103..105 "BY"
    Whitespace@105..106 " "
    AConst@106..107
      Iconst@106..107 "1"
  Ascii44@107..108 ","
  Whitespace@108..109 " "
  SortBy@109..110
    AConst@109..110
      Iconst@109..110 "2"
  Ascii44@110..111 ","
  Whitespace@111..112 " "
  SortBy@112..113
    AConst@112..113
      Iconst@112..113 "3"
  Ascii59@113..114 ";"

