crates/pg_syntax/tests/snapshots/postgres_regress/partition_aggregate@50.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT t1.x, sum(t1.y), count(t1) FROM pagg_tab1 t1, pagg_tab2 t2 WHERE t1.x = t2.y GROUP BY t1.x ORDER BY 1, 2, 3;"
---
SelectStmt@0..115
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      Ident@10..11 "x"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..21
    FuncCall@13..21
      Ident@13..16 "sum"
      Ascii40@16..17 "("
      ColumnRef@17..21
        Ident@17..19 "t1"
        Ascii46@19..20 "."
        Ident@20..21 "y"
  Ascii41@21..22 ")"
  Ascii44@22..23 ","
  Whitespace@23..24 " "
  ResTarget@24..32
    FuncCall@24..32
      Ident@24..29 "count"
      Ascii40@29..30 "("
      ColumnRef@30..32
        Ident@30..32 "t1"
  Ascii41@32..33 ")"
  Whitespace@33..34 " "
  From@34..38 "FROM"
  Whitespace@38..39 " "
  RangeVar@39..51
    Ident@39..48 "pagg_tab1"
    Whitespace@48..49 " "
    Alias@49..51
      Ident@49..51 "t1"
  Ascii44@51..52 ","
  Whitespace@52..53 " "
  RangeVar@53..65
    Ident@53..62 "pagg_tab2"
    Whitespace@62..63 " "
    Alias@63..65
      Ident@63..65 "t2"
  Whitespace@65..66 " "
  Where@66..71 "WHERE"
  Whitespace@71..72 " "
  AExpr@72..83
    ColumnRef@72..76
      Ident@72..74 "t1"
      Ascii46@74..75 "."
      Ident@75..76 "x"
    Whitespace@76..77 " "
    Ascii61@77..78 "="
    Whitespace@78..79 " "
    ColumnRef@79..83
      Ident@79..81 "t2"
      Ascii46@81..82 "."
      Ident@82..83 "y"
  Whitespace@83..84 " "
  GroupP@84..89 "GROUP"
  Whitespace@89..90 " "
  By@90..92 "BY"
  Whitespace@92..93 " "
  ColumnRef@93..97
    Ident@93..95 "t1"
    Ascii46@95..96 "."
    Ident@96..97 "x"
  Whitespace@97..98 " "
  SortBy@98..108
    Order@98..103 "ORDER"
    Whitespace@103..104 " "
    By@104..106 "BY"
    Whitespace@106..107 " "
    AConst@107..108
      Iconst@107..108 "1"
  Ascii44@108..109 ","
  Whitespace@109..110 " "
  SortBy@110..111
    AConst@110..111
      Iconst@110..111 "2"
  Ascii44@111..112 ","
  Whitespace@112..113 " "
  SortBy@113..114
    AConst@113..114
      Iconst@113..114 "3"
  Ascii59@114..115 ";"

