crates/pg_syntax/tests/snapshots/postgres_regress/partition_aggregate@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE pagg_tab_p1 PARTITION OF pagg_tab FOR VALUES IN ('0000', '0001', '0002', '0003', '0004');"
---
CreateStmt@0..102
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..24
    Ident@13..24 "pagg_tab_p1"
  Whitespace@24..25 " "
  Partition@25..34 "PARTITION"
  Whitespace@34..35 " "
  Of@35..37 "OF"
  Whitespace@37..38 " "
  RangeVar@38..46
    Ident@38..46 "pagg_tab"
  Whitespace@46..47 " "
  For@47..50 "FOR"
  Whitespace@50..51 " "
  Values@51..57 "VALUES"
  Whitespace@57..58 " "
  PartitionBoundSpec@58..100
    InP@58..60 "IN"
    Whitespace@60..61 " "
    Ascii40@61..62 "("
    AConst@62..68
      Sconst@62..68 "'0000'"
    Ascii44@68..69 ","
    Whitespace@69..70 " "
    AConst@70..76
      Sconst@70..76 "'0001'"
    Ascii44@76..77 ","
    Whitespace@77..78 " "
    AConst@78..84
      Sconst@78..84 "'0002'"
    Ascii44@84..85 ","
    Whitespace@85..86 " "
    AConst@86..92
      Sconst@86..92 "'0003'"
    Ascii44@92..93 ","
    Whitespace@93..94 " "
    AConst@94..100
      Sconst@94..100 "'0004'"
  Ascii41@100..101 ")"
  Ascii59@101..102 ";"

