crates/pg_syntax/tests/snapshots/postgres_regress/partition_aggregate@63.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT a.x, b.y, count(*) FROM (SELECT * FROM pagg_tab1 WHERE x < 20) a LEFT JOIN (SELECT * FROM pagg_tab2 WHERE y > 10) b ON a.x = b.y WHERE a.x > 5 or b.y < 20  GROUP BY a.x, b.y ORDER BY 1, 2;"
---
SelectStmt@0..195
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..10
    ColumnRef@7..10
      Ident@7..8 "a"
      Ascii46@8..9 "."
      Ident@9..10 "x"
  Ascii44@10..11 ","
  Whitespace@11..12 " "
  ResTarget@12..15
    ColumnRef@12..15
      Ident@12..13 "b"
      Ascii46@13..14 "."
      Ident@14..15 "y"
  Ascii44@15..16 ","
  Whitespace@16..17 " "
  ResTarget@17..24
    FuncCall@17..24
      Ident@17..22 "count"
      Ascii40@22..23 "("
      Ascii42@23..24 "*"
  Ascii41@24..25 ")"
  Whitespace@25..26 " "
  From@26..30 "FROM"
  Whitespace@30..31 " "
  Ascii40@31..32 "("
  JoinExpr@32..135
    RangeSubselect@32..71
      SelectStmt@32..68
        Select@32..38 "SELECT"
        Whitespace@38..39 " "
        ResTarget@39..40
          ColumnRef@39..40
            AStar@39..40
              Ascii42@39..40 "*"
        Whitespace@40..41 " "
        From@41..45 "FROM"
        Whitespace@45..46 " "
        RangeVar@46..55
          Ident@46..55 "pagg_tab1"
        Whitespace@55..56 " "
        Where@56..61 "WHERE"
        Whitespace@61..62 " "
        AExpr@62..68
          ColumnRef@62..63
            Ident@62..63 "x"
          Whitespace@63..64 " "
          Ascii60@64..65 "<"
          Whitespace@65..66 " "
          AConst@66..68
            Iconst@66..68 "20"
      Ascii41@68..69 ")"
      Whitespace@69..70 " "
      Alias@70..71
        Ident@70..71 "a"
    Whitespace@71..72 " "
    Left@72..76 "LEFT"
    Whitespace@76..77 " "
    Join@77..81 "JOIN"
    Whitespace@81..82 " "
    Ascii40@82..83 "("
    RangeSubselect@83..122
      SelectStmt@83..119
        Select@83..89 "SELECT"
        Whitespace@89..90 " "
        ResTarget@90..91
          ColumnRef@90..91
            AStar@90..91
              Ascii42@90..91 "*"
        Whitespace@91..92 " "
        From@92..96 "FROM"
        Whitespace@96..97 " "
        RangeVar@97..106
          Ident@97..106 "pagg_tab2"
        Whitespace@106..107 " "
        Where@107..112 "WHERE"
        Whitespace@112..113 " "
        AExpr@113..119
          ColumnRef@113..114
            Ident@113..114 "y"
          Whitespace@114..115 " "
          Ascii62@115..116 ">"
          Whitespace@116..117 " "
          AConst@117..119
            Iconst@117..119 "10"
      Ascii41@119..120 ")"
      Whitespace@120..121 " "
      Alias@121..122
        Ident@121..122 "b"
    Whitespace@122..123 " "
    On@123..125 "ON"
    Whitespace@125..126 " "
    AExpr@126..135
      ColumnRef@126..129
        Ident@126..127 "a"
        Ascii46@127..128 "."
        Ident@128..129 "x"
      Whitespace@129..130 " "
      Ascii61@130..131 "="
      Whitespace@131..132 " "
      ColumnRef@132..135
        Ident@132..133 "b"
        Ascii46@133..134 "."
        Ident@134..135 "y"
  Whitespace@135..136 " "
  Where@136..141 "WHERE"
  Whitespace@141..142 " "
  BoolExpr@142..161
    AExpr@142..149
      ColumnRef@142..145
        Ident@142..143 "a"
        Ascii46@143..144 "."
        Ident@144..145 "x"
      Whitespace@145..146 " "
      Ascii62@146..147 ">"
      Whitespace@147..148 " "
      AConst@148..149
        Iconst@148..149 "5"
    Whitespace@149..150 " "
    Or@150..152 "or"
    Whitespace@152..153 " "
    AExpr@153..161
      ColumnRef@153..156
        Ident@153..154 "b"
        Ascii46@154..155 "."
        Ident@155..156 "y"
      Whitespace@156..157 " "
      Ascii60@157..158 "<"
      Whitespace@158..159 " "
      AConst@159..161
        Iconst@159..161 "20"
  Whitespace@161..163 "  "
  GroupP@163..168 "GROUP"
  Whitespace@168..169 " "
  By@169..171 "BY"
  Whitespace@171..172 " "
  ColumnRef@172..175
    Ident@172..173 "a"
    Ascii46@173..174 "."
    Ident@174..175 "x"
  Ascii44@175..176 ","
  Whitespace@176..177 " "
  ColumnRef@177..180
    Ident@177..178 "b"
    Ascii46@178..179 "."
    Ident@179..180 "y"
  Whitespace@180..181 " "
  SortBy@181..191
    Order@181..186 "ORDER"
    Whitespace@186..187 " "
    By@187..189 "BY"
    Whitespace@189..190 " "
    AConst@190..191
      Iconst@190..191 "1"
  Ascii44@191..192 ","
  Whitespace@192..193 " "
  SortBy@193..194
    AConst@193..194
      Iconst@193..194 "2"
  Ascii59@194..195 ";"

