crates/pg_syntax/tests/snapshots/postgres_regress/partition_aggregate@67.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT a.x, a.y, count(*) FROM (SELECT * FROM pagg_tab1 WHERE x = 1 AND x = 2) a LEFT JOIN pagg_tab2 b ON a.x = b.y GROUP BY a.x, a.y ORDER BY 1, 2;"
---
SelectStmt@0..148
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..10
    ColumnRef@7..10
      Ident@7..8 "a"
      Ascii46@8..9 "."
      Ident@9..10 "x"
  Ascii44@10..11 ","
  Whitespace@11..12 " "
  ResTarget@12..15
    ColumnRef@12..15
      Ident@12..13 "a"
      Ascii46@13..14 "."
      Ident@14..15 "y"
  Ascii44@15..16 ","
  Whitespace@16..17 " "
  ResTarget@17..24
    FuncCall@17..24
      Ident@17..22 "count"
      Ascii40@22..23 "("
      Ascii42@23..24 "*"
  Ascii41@24..25 ")"
  Whitespace@25..26 " "
  From@26..30 "FROM"
  Whitespace@30..31 " "
  Ascii40@31..32 "("
  JoinExpr@32..115
    RangeSubselect@32..80
      SelectStmt@32..77
        Select@32..38 "SELECT"
        Whitespace@38..39 " "
        ResTarget@39..40
          ColumnRef@39..40
            AStar@39..40
              Ascii42@39..40 "*"
        Whitespace@40..41 " "
        From@41..45 "FROM"
        Whitespace@45..46 " "
        RangeVar@46..55
          Ident@46..55 "pagg_tab1"
        Whitespace@55..56 " "
        Where@56..61 "WHERE"
        Whitespace@61..62 " "
        BoolExpr@62..77
          AExpr@62..67
            ColumnRef@62..63
              Ident@62..63 "x"
            Whitespace@63..64 " "
            Ascii61@64..65 "="
            Whitespace@65..66 " "
            AConst@66..67
              Iconst@66..67 "1"
          Whitespace@67..68 " "
          And@68..71 "AND"
          Whitespace@71..72 " "
          AExpr@72..77
            ColumnRef@72..73
              Ident@72..73 "x"
            Whitespace@73..74 " "
            Ascii61@74..75 "="
            Whitespace@75..76 " "
            AConst@76..77
              Iconst@76..77 "2"
      Ascii41@77..78 ")"
      Whitespace@78..79 " "
      Alias@79..80
        Ident@79..80 "a"
    Whitespace@80..81 " "
    Left@81..85 "LEFT"
    Whitespace@85..86 " "
    Join@86..90 "JOIN"
    Whitespace@90..91 " "
    RangeVar@91..102
      Ident@91..100 "pagg_tab2"
      Whitespace@100..101 " "
      Alias@101..102
        Ident@101..102 "b"
    Whitespace@102..103 " "
    On@103..105 "ON"
    Whitespace@105..106 " "
    AExpr@106..115
      ColumnRef@106..109
        Ident@106..107 "a"
        Ascii46@107..108 "."
        Ident@108..109 "x"
      Whitespace@109..110 " "
      Ascii61@110..111 "="
      Whitespace@111..112 " "
      ColumnRef@112..115
        Ident@112..113 "b"
        Ascii46@113..114 "."
        Ident@114..115 "y"
  Whitespace@115..116 " "
  GroupP@116..121 "GROUP"
  Whitespace@121..122 " "
  By@122..124 "BY"
  Whitespace@124..125 " "
  ColumnRef@125..128
    Ident@125..126 "a"
    Ascii46@126..127 "."
    Ident@127..128 "x"
  Ascii44@128..129 ","
  Whitespace@129..130 " "
  ColumnRef@130..133
    Ident@130..131 "a"
    Ascii46@131..132 "."
    Ident@132..133 "y"
  Whitespace@133..134 " "
  SortBy@134..144
    Order@134..139 "ORDER"
    Whitespace@139..140 " "
    By@140..142 "BY"
    Whitespace@142..143 " "
    AConst@143..144
      Iconst@143..144 "1"
  Ascii44@144..145 ","
  Whitespace@145..146 " "
  SortBy@146..147
    AConst@146..147
      Iconst@146..147 "2"
  Ascii59@147..148 ";"

