crates/pg_syntax/tests/snapshots/postgres_regress/partition_aggregate@69.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE pagg_tab_m_p1 PARTITION OF pagg_tab_m FOR VALUES FROM (0, 0) TO (12, 12);"
---
CreateStmt@0..86
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..26
    Ident@13..26 "pagg_tab_m_p1"
  Whitespace@26..27 " "
  Partition@27..36 "PARTITION"
  Whitespace@36..37 " "
  Of@37..39 "OF"
  Whitespace@39..40 " "
  RangeVar@40..50
    Ident@40..50 "pagg_tab_m"
  Whitespace@50..51 " "
  For@51..54 "FOR"
  Whitespace@54..55 " "
  Values@55..61 "VALUES"
  Whitespace@61..62 " "
  PartitionBoundSpec@62..84
    From@62..66 "FROM"
    Whitespace@66..67 " "
    Ascii40@67..68 "("
    AConst@68..69
      Iconst@68..69 "0"
    Ascii44@69..70 ","
    Whitespace@70..71 " "
    AConst@71..72
      Iconst@71..72 "0"
    Ascii41@72..73 ")"
    Whitespace@73..74 " "
    To@74..76 "TO"
    Whitespace@76..77 " "
    Ascii40@77..78 "("
    AConst@78..80
      Iconst@78..80 "12"
    Ascii44@80..81 ","
    Whitespace@81..82 " "
    AConst@82..84
      Iconst@82..84 "12"
  Ascii41@84..85 ")"
  Ascii59@85..86 ";"

